public interface Payable {

    class Payment{
        ;
    }

}
